--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,6 +69,30 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+#main_footer {
+  padding: 2.5em 5%;
+  border-top: 1px solid red;
+  .copyright {
+  float: left;
+  font-size: .9em;
+  margin: 0;
+  }
+  nav {
+    float: right;
+    i {
+      color: black;
+      margin-left: 1em;
+      padding-top: .2em;
+      font-size: 20px;
+      // &:hover {
+      //   color: &highlight;
+      //   transform: scale(1.2);
+      //   transition: 0.3s;
+      // }
+    }
+  }
+}s
+
 
 /* Links styles */
 
