--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@ body {
   background:      -o-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
   background:         linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
   font-family: 'Lato', sans-serif;
+  // h\eight: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -72,6 +73,8 @@ h1, h2, h3, h4, h5, h6 {
 #main_footer {
   padding: 2.5em 5%;
   border-top: 1px solid red;
+  position: absolute;
+  bottom: 0;
   .copyright {
   float: left;
   font-size: .9em;
@@ -91,7 +94,7 @@ h1, h2, h3, h4, h5, h6 {
       // }
     }
   }
-}s
+}
 
 
 /* Links styles */
