--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,7 @@ body {
   background:      -o-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
   background:         linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
   font-family: 'Lato', sans-serif;
-  // h\eight: 100%;
+  height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -67,7 +67,6 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: 1.1px;
     font-size: 1.9em;
   }
-
 }
 
 #main_footer {
