--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,6 +74,7 @@ h1, h2, h3, h4, h5, h6 {
   border-top: 1px solid red;
   position: absolute;
   bottom: 0;
+  width: 100%;
   .copyright {
   float: left;
   font-size: .9em;
