--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 #main_footer {
   padding: 2.5em 5%;
   border-top: 1px solid red;
-  // position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   .copyright {
