--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,11 +5,11 @@
 /* General styles */
 
 body {
-  background: -webkit-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
-  background:    -moz-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
-  background:     -ms-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
-  background:      -o-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
-  background:         linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
+  // background: -webkit-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
+  // background:    -moz-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
+  // background:     -ms-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
+  // background:      -o-linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
+  // background:         linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
   font-family: 'Lato', sans-serif;
   height: 100%;
 }
