removed bottom to footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@ body {
   // background:         linear-gradient(40deg, #d1edf0 10%, #ecc8c6 100%);
   font-family: 'Lato', sans-serif;
   height: 100%;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
